@@ -8,8 +8,10 @@ Revision history for Data::ObjectDriver
       for the patch.
     - Fixed compilation error with Perl 5.10. Thanks to smpeters for the patch.
     - Added a new $object->uncache_object as a mirror of cache_object(), which
-      purge one object from the cache layer, for the cases where you want a manual
-      control over it.
+      purge one object from the cache layer, for the cases where you want a
+      manual control over it.
+    - Added a "distinct" method to D::OD::SQL that forces the DISTINCT keyword
+      in the generated SQL statement. Thanks to John Berthels for the patch.
 
 0.05  2008.02.24
     - Added a new Data::ObjectDriver::ResultSet abstraction for building
